# NexusRealtime-Experiments

./: README.md  arcade.json  goal.md  index.html  memory.md  package.json
.agent/: candidate-promotions.md  cleanup-log.md  cycle-state.md  domain-backlog.md  dsk-boundaries.md  experiment-map.md  intent.md  protokit-map.md  pruning-log.md  replay-qa.md  route-canonicalization.md  smoke-tests.md
.playwright-cli/: page-2026-06-17T01-07-51-425Z.yml
Ideas/: README.md
docs/: VISUAL-EXPERIMENT-LOOP.md  aaa-100-game-backlog.md  experiment-domain-cutover.md  gallery-cover-capture.md  gallery-redesign-change-ledger.md  repeatable-experiment-structure.md
experiments/: canonical-route-replay-manifest.json  domain-kit-cutover-manifest.json  executable-route-replay-import-gates.json  headless-lane-replay-contracts.json  index.html  next-ledge-route-progress-replay.json  signal-bastion-route-domain-replay.json  twenty-experiment-seeder-map.json
native/spatial-authoring-openxr-apk/app/src/main/cpp/: CMakeLists.txt  spatial_authoring_openxr.cpp  spatial_authoring_toolkit_host.cpp  vr_platformer_board_openxr.cpp
scripts/: generate-application-routes.mjs  generate-flat-experiment-routes.mjs  generate-gallery-data.mjs  run-checks.mjs
templates/: game-idea-template.md
tests/: aaa-batch-gamehost-contract-smoke.mjs  aaa-batch-static-smoke.mjs  agent-labs-static-smoke.mjs  canonical-game-routes-smoke.mjs  canonical-route-pruning-map-smoke.mjs  canonical-route-replay-manifest-smoke.mjs  cavalry-of-rome-combat-static-smoke.mjs  cavalry-of-rome-opponent-ai-static-smoke.mjs  (+28 more)
(+591 files in other folders)
